# vaka-assistant-v2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.embeddings  Makefile  README.md  alembic.ini  implementation_plan_v1.md  pyproject.toml  tools_registry_v1.md
.claude/: settings.json
core/: __init__.py  agent.py  calendar_view.py  config.py  context.py  context_manager.py  crypto.py  db.py  dialog_store.py  embeddings.py  envelope.py  finance_service.py  finance_summary.py  limits.py  llm.py  llm_mock.py  llm_openrouter.py  llm_resilient.py  locks.py  logging_setup.py  metrics.py  model_router.py  prompt.py  queue.py  rate_limit.py  registry_dispatcher.py  reminders_service.py  secrets.py  secrets_entrypoint.py  spend.py  ssrf.py  stt.py  summarize.py  telegram_format.py  telegram_sender.py  time_keys.py  timezones.py  tokens.py  tools.py  tools_dispatch.py  (+3 more)
docs/: bot-analysis-2026-07-17.md  delegation-stage-9-1a-gpt-5.6-terra.md  dev-log.md  runbook-deploy.md  runbook.md  stage-9-1a-acceptance-2026-07-17.md  stage-9-1b-acceptance-2026-07-17.md  stage-9-2-acceptance-2026-07-17.md  stage-9-3d-acceptance-2026-07-17.md  stage-9-3e-acceptance-2026-07-17.md  stage-9-4-acceptance-2026-07-18.md  stage-9-preparation-2026-07-17.md
embeddings/: __init__.py  app.py
evals/: __init__.py  embeddings_benchmark.py  prompt_eval.py  scenarios_v1.py
gateway/: __init__.py  __main__.py  app.py  config.py
infra/: README.md  compose.prod.yml  docker-compose.dev.yml  restore-to-dev.sh
migrations/: env.py  script.py.mako
miniapp/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
plan/: assistant-persona-iteration-1.md  assistant-persona-iteration-2.md  db-schema.md  miniapp-calendar-spec.md  miniapp-design-iteration-1.md  miniapp-design-iteration-2.md  miniapp-finance-spec.md  onboarding-script-iteration-1.md  plan-improvements.md  pricing-draft.md  progress.md  requirements.md  stage-0.md  stage-1.md  stage-2.md  stage-3.md  stage-4.md  stage-5.md  stage-6.md  stage-7.md  stage-8.md  (+4 more)
(+178 files in other folders)
