[project]
name = "personal-assistant"
version = "0.1.0"
description = "Multi-tenant Telegram personal assistant service"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "openai>=2.45.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "redis>=8.0.1",
    "uuid-utils>=0.17.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "asyncpg-stubs>=0.31.2",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway", "worker", "core", "tools"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["gateway", "worker", "core", "tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require the local docker compose infrastructure",
    "slow: tests that exercise slower end-to-end reliability flows",
]
